prevent tag title from wrapping

--- a/frontend/src/app/features/tag/tag-list-item/tag-list-item.component.scss
+++ b/frontend/src/app/features/tag/tag-list-item/tag-list-item.component.scss
@@ -4,6 +4,9 @@ ion-card {
 
 ion-card-title {
   font-size: 1.5em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 ion-card-header {
